resolved problem with huge images before page is loaded in insight boxes - UPDATE (resolved problem with size on small devices)

--- a/wp-content/themes/event-shares/pagebox/modules/insight_boxes/scss/module.scss
+++ b/wp-content/themes/event-shares/pagebox/modules/insight_boxes/scss/module.scss
@@ -296,11 +296,15 @@
           width: 90px;
         }
         img {
-          width: 90px;
-          height: 105px;
+          width: 100%;
+          height: auto;
           max-width: 100%;
+          max-height: 130px;
           display: block;
           margin: 0 auto;
+          @include media-breakpoint-down(md) {
+            max-height: 100%;
+          }
         }
       }
 
